 letter should be prohibited in package names; You have to rebuild your universe with
 WorldGenerator.
 - 12/21/07 - Moving the class 'wotlas.common.objects.inventories.InventoryLayout' : it uses wotlas 
client references, it should be moved in wotlas.client.screen.plugin.
 - 12/21/07 - Fix wotlas.utils.Tools : using HashSet in order to have once time a class or a resource.

Sleeping Owl - Jdk 1.6 compliant task - more clean up
 - 12/13/07 - eclipse-netbeans development : cleanup and checkstyle
 - 12/13/07 - using generic types parameterized (ArrayList, HashMap, ...)  


CHANGES BETWEEN V3 AND V1.3.1 (December 2007)
---------------------------------------------

Sleeping Owl - preparing alpha release
 - 12/11/07 - Fix : loading of messages and plugins classes in JavaWebStart client.
 - 12/11/07 - Eclipse integration : adding resources in /wotlas/.settings/ directory.
 - 12/09/07 - Fix : loading images and world map datas in WebStart release.
 - 12/03/07 - netbeans development : javawebstart integration
 - 12/03/07 - fixing the building server default id

Sleeping Owl - Jdk 1.6 compliant task
 - 11/26/07 - Alice bot sources of program D from wotlas141.zip
 - 11/26/07 - Jython jar from vyger project
 - 11/26/07 - Applying Eclipse clean-up tool

Sleeping Owl - Jdk 1.6 compliant task
 - 11/25/07 - Fix : unmappable character for encoding UTF-8
 - 11/25/07 - Fix : Font loading and NullPointerException
 - 11/25/07 - Fix : non-varargs call of varargs method
 - 11/25/07 - Fix : enum keyword
 - 11/25/07 - Fix : assignement has no effect
 - 11/25/07 - Changing ../bin in bin
 - 11/25/07 - netbeans and eclipse development
 - 11/25/07 - netbeans and eclipse development running and testing.
 - 11/25/07 - eclipse sources cleanup


SSzretter -
 - 12/20/03 Changed all hard coded references to "Lucida Blackletter" to "Lucida Blackletter Regular" to fix Java 1.4.2 compatibility
    ** need to test this new font name on linux/mac to make sure it works